# monitors

./: Cargo.toml  README.md
src/: cores.rs  data.rs  main.rs  packages.rs  processes.rs  stats.rs
src/data/: mod.rs  packages.rs
src/pages/: history.rs  mod.rs  monitor.rs  processes.rs  stats.rs
