[package]
name = "monitors"
version = "0.1.0"
edition = "2021"
authors = ["Creative Coders <officialccoders@gmail.com>"]
description = "A chatbot application that uses Ollama AIs."
repository = "https://github.com/CodersCreative/ollama-chat-iced"
readme = "README.md"
publish = true
keywords = ["ai", "iced", "chat", "chatbot", "ollama"]
categories = ["gui", "accessibility"]
license = "MIT"


[dependencies]
crossterm = "0.28.1"
hw-linux = "0.1.0"
ratatui = "0.29.0"
sysinfo = "0.32.0"
