[package]
name = "monitors"
version = "0.1.0"
edition = "2021"
authors = ["Creative Coders <officialccoders@gmail.com>"]
description = "A CLI tool made using ratatui and rust that allows you to monitor your system information."
repository = "https://github.com/CodersCreative/monitors"
readme = "README.md"
publish = true
keywords = ["system", "monitor", "ratatui", "processes", "performance"]
categories = ["command-line-interface", "accessibility"]
license = "MIT"


[dependencies]
crossterm = "0.28.1"
hw-linux = "0.1.0"
ratatui = "0.29.0"
sysinfo = "0.32.0"
